@@ -5,6 +5,9 @@
 @section v2_05_dev Changes with libapreq2-2.05-dev
 
 
+- C API [Max Kellermann]
+  Fix apreq_quote.
+
 - Perl API [joes]
   Remove Apache2::Request::args.  WARNING: through inheritance,
   args() now maps to Apache2::RequestRec::args.  Folks that want
